# 2.02.02 (56528) Sep 13, 2011
Forces and Motion Basics: Use complete words like Ffriction instead of abbreviations like Ff
Forces and Motion Basics: Use "total" instead of "sum" for force
Forces and Motion Basics: Use "push" instead of "applied" for force
# 2.02.01 (56467) Sep 13, 2011
Forces and Motion Basics: Ensure static friction coefficient always equals kinetic friction coefficient
Forces and Motion Basics: Don't show gravity and normal force arrows by default
Forces and Motion Basics: Wired up control for gravity and normal force arrows
Forces and Motion Basics: Added a control for gravity and normal force arrows, not wired up yet
Forces and Motion Basics: Removed the free body diagram on/off control box
Forces and Motion Basics: Include only one friction slider in friction tab which sets both kinetic and static friction
Forces and Motion Basics: Give object mass in kg only (take out friction information from drop down menu)
Forces and Motion Basics: Removed "Force Graphs" tab
Forces and Motion Basics: Created new "basics" sim
# 2.02.00 (55864) Aug 29, 2011
# 2.01.03 (55719) Aug 23, 2011
> Changed "total force" to "sum of forces", see #3041
# 2.01.02 (55314) Aug 16, 2011
> Reverted all customizations
Reverted all customizations for Dallas
> Reverted to smaller vector arrow dimensions
# 2.01.01 (55260) Aug 15, 2011
> Restored gravity and normal force vectors
> Fixed crate image, crashes were happening when it was too far from the wall
Updated screenshot for forces-and-motion, see #3040
# 2.01.00 (53821) Jul 6, 2011
7/6/11 > added new translation credits features
# 2.00.06 (53457) Jun 24, 2011
Removed usage of App trait, see #2877
# 2.00.05 (53432) Jun 23, 2011
Switched to use HTMLImageButtonNode instead of ButtonNode
Switched to use App instead of main
Updated to use piccolo's version of SwingLayoutNode, see #2375
# 2.00.04 (48705) Feb 7, 2011
Fixed: improved fix for hiding the horizontal line before the total force arrow is shown