@@ -154,6 +154,7 @@ game.summary.pattern.result-score = = {0} points
 # String just appearing in Forces & Motion
 forces-and-motion.name         =Forces and Motion
 forces-and-motion-basics.name         =Forces and Motion Basics
+ramp-forces-and-motion-basics.name         =Ramp: Forces and Motion Basics
 
 bodies.moon=Moon
 bodies.earth = Earth
