@@ -6,3 +6,4 @@ project.depends.lib=phetcommon : piccolo-phet : jfreechart-phet : scala-common :
 project.flavor.forces-and-motion.mainclass=edu.colorado.phet.motionseries.sims.forcesandmotion.ForcesAndMotionApplication
 project.flavor.ramp-forces-and-motion.mainclass=edu.colorado.phet.motionseries.sims.rampforcesandmotion.RampForcesAndMotionApplication
 project.flavor.forces-and-motion-basics.mainclass=edu.colorado.phet.motionseries.sims.forcesandmotionbasics.ForcesAndMotionBasicsApplication
+project.flavor.ramp-forces-and-motion-basics.mainclass=edu.colorado.phet.motionseries.sims.rampforcesandmotionbasics.RampForcesAndMotionBasicsApplication
