@@ -1,3 +1,4 @@
+Ramp Forces and Motion Basics: Created new flavor
 # 2.02.02 (56528) Sep 13, 2011
 Forces and Motion Basics: Use complete words like Ffriction instead of abbreviations like Ff
 Forces and Motion Basics: Use "total" instead of "sum" for force
